# Aplicacao-Grafica-com-Ds

antigos/tp1_arthur_antigo/: Cube.h  GUIInitializer.h  Main.cpp  MainWindow.cpp  PBRMaterial.h  Scene.h  SceneBuilder.h
antigos/tp1_caio_antigo/: MainWindow.cpp  MainWindow.h  README  imgui.ini
p1/: Actor.h  CMakeLists.txt  Intersection.h  Main.cpp  MainWindow.cpp  MainWindow.h  Plane.cpp  Plane.h  README.txt  Scene.cpp  Scene.h  Shape3.h  Sphere.cpp  Sphere.h
p1/Debug/: imgui.ini
p2/: Actor.cpp  Actor.h  Box.cpp  Box.h  CMakeLists.txt  MainWindow.cpp  MainWindow.h  Plane.cpp  Plane.h  README.txt  Scene.cpp  Scene.h  Shape3.h  Sphere.cpp  Sphere.h  resumo.txt
tp1/: Box.h  CMakeLists.txt  COMO_RODAR.txt  Cube.h  GUIInitializer.cpp  GUIInitializer.h  Intersection.h  MainWindow.cpp  MainWindow.h  PBRActor.h  PBRMaterial.h  PBRRenderer.cpp  PBRRenderer.h  Plane.h  README  README_T1.txt  RayCaster.cpp  RayCaster.h  Scene.h  SceneBuilder.h  Shape3.h  Sphere.h  imgui.ini
tp1/Debug/: imgui.ini
tp1/backup/: Box.h  Cube.h  GUIInitializer.cpp  GUIInitializer.h  MainWindow.cpp  MainWindow.h  PBRActor.h  Plane.h  README_P2.txt  RayCaster.cpp  RayCaster.h  SceneBuilder.h
tp1_caio/: Box.cpp  Box.h  CMakeLists.txt  COMO_RODAR.txt  Main.cpp  MainWindow.cpp  MainWindow.h
tp1_caio/tp1/: CMakeLists.txt  GUIInitializer.cpp  GUIInitializer.h  MainWindow.cpp  MainWindow.h  PBRActor.h  PBRMaterial.h  PBRRenderer.cpp  PBRRenderer.h  Plane.h  RayCaster.cpp  RayCaster.h  Scene.h  SceneBuilder.h  Shape3.h  Sphere.h  SphereMeshGenerator.h
tp1_caio/tp1/Debug/: imgui.ini
tp1_caio/tp2/: CMakeLists.txt  MainWindow.h  RayTracer.h
tp1_caio/tp2/Debug/: imgui.ini
tp1_caio/tp2/Debug/assets/scenes/: scene2_nested_transparent.scn  scene3_light_inside_transparent.scn  scene5_creative.scn
tp2/: CMakeLists.txt  Main.cpp  MainWindow.cpp  MainWindow.h  README.txt  RayTracer.cpp  RayTracer.h  imgui.ini
tp2/assets/scenes/: materials_transparent.inc  scene_2_aquarium.scn  scene_4_antialiasing_test.scn  scene_5_antialising_test2.scn  scene_6_intersection.scn
tp2_caio/: CMakeLists.txt  MainWindow.cpp  RayTracer.cpp  RayTracer.h
tp2_caio/Debug/: imgui.ini
tp2_caio/Debug/assets/scenes/: scene1_basic_refraction.scn  scene4_aliasing_test.scn
tp2_caio/assets/scenes/: art_1_glass_showcase.scn  art_2_aquarium.scn  art_3_attribute_variations.scn  art_4_antialiasing_test.scn  materials_transparent.inc  scene1_basic_refraction.scn  scene2_nested_transparent.scn  scene3_light_inside_transparent.scn  scene4_aliasing_test.scn  scene5_creative.scn  scene_1_glass_showcase.scn  scene_3_attribute_variations.scn  scene_5_antialising_test2.scn
